# BackendV1

./: .env  Cargo.toml  Readme.md
migration-helper/prisma/: schema.prisma
migration-helper/prisma/migrations/20211019033126_initialize_user/: migration.sql
migration-helper/prisma/migrations/20211019115458_/: migration.sql
migration-helper/prisma/migrations/20211019120249_y/: migration.sql
src/: lib.rs  main.rs  middlewares.rs  models.rs  models_generated.rs  schema.rs
src/controllers/: auth.rs  mod.rs  summit.rs  user.rs
src/models/: mod.rs  summit.rs  user.rs
src/repository/: mod.rs  summit.rs  user.rs
src/usecase/: auth.rs  mod.rs  summit.rs  user.rs
src/utils/: connection.rs  mod.rs
