[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
chrono = {version="0.4", feature=["serde"]}
diesel = {version="1.4.8", features= ["mysql", "chrono"]}
dotenv = "0.15.0"
serde = {version="1.0", features= ["derive"]}
